force-app/main/default/objects/Dealer_Registration__c/Dealer_Registration__c.object-meta.xml
<CustomObject>
    <description>Stores dealer registration workflow submissions and reusable workflow state.</description>
    <label>Dealer Registration</label>
    <nameField>
        <label>Dealer Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>