force-app/main/default/objects/Dealer_Registration__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Stores the dealer bank account number.</description>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>