force-app/main/default/objects/Dealer_Registration__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <description>Stores the assigned workflow owner.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned User Records</relationshipLabel>
    <relationshipName>Dealer_Registration_Assigned_User</relationshipName>
    <type>Lookup</type>
</CustomField>