force-app/main/default/objects/Dealer_Registration__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Identifies the dealer&apos;s business category.</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Service Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>