force-app/main/default/objects/Dealer_Registration__c/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <description>Stores the dealer GST registration number.</description>
    <label>GST Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>