force-app/main/default/objects/Dealer_Registration__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <description>Stores the dealer bank IFSC code.</description>
    <label>IFSC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>