force-app/main/default/objects/Dealer_Registration__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>Stores the dealer business license number.</description>
    <label>License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>