force-app/main/default/objects/Dealer_Registration__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Stores the contact number of the workflow user.</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>