force-app/main/default/objects/Dealer_Registration__c/fields/Step_Status__c.field-meta.xml
<CustomField>
    <fullName>Step_Status__c</fullName>
    <description>Stores the current workflow step information.</description>
    <label>Step Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>